--- a/site/index.html
+++ b/site/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Entrance</title>
-        <script src="index.js"></script>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body onclick="redirect()">
-        <div id="aaa" onclick="redirect()">
-            <p id="p1">Press anywhere to continue...</p>
-        </div>
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>首頁</title>
+<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="/my-site/site/module/mainstyle.css"/>
+<link rel="stylesheet" href="info/style.css">
+<link rel="icon" href="/my-site/site/module/icon/home.ico" type="image/x-icon">
+<script src="/my-site/site/module/jquery.min.js"></script>
+<script src="/my-site/site/module/mainstyleadjust.js"></script>
+<meta name="google-site-verification" content="s6W13EXbiXv_c6QCTBcDxGa5S0fgjULsf1gPR_ndgEk" />
 
-    </body>
+</head>
+<body>
+	<div id="all">
+		<div class="bg" >
+				
+		</div>
+		<div id="pageinfo">
+			<div id="hello">
+				<p>Hello World</p>
+			</div>
+			
+		</div>
+		
+	</div>
+	
+	
+<script>
+	$(function(){
+		/*公共部分
+		* 導航欄
+		* footer CopyRight
+		*/
+		$(".bg").load("/my-site/site/module/bginfo/bg.html");
+		
+	});
+</script>
+
+
+</body>
 </html>
