--- a/site/module/bginfo/bg.html
+++ b/site/module/bginfo/bg.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link href="/module/bginfo/sources/bg.css" rel="stylesheet">
+        <link href="/my-site/site/module/bginfo/sources/bg.css" rel="stylesheet">
     </head>
     <body>
         <div id="ctpan">
-            <a href="#" onclick="showopt()"><img id="optionico" src="/module/bginfo/images/option2.png"></a>
+            <a href="#" onclick="showopt()"><img id="optionico" src="/my-site/site/module/bginfo/images/option2.png"></a>
             <div id="optall">
                 
                 <div id="optlay1">
-                    <div id="opthome" onclick="clickbutt('opthome','/')">
+                    <div id="opthome" onclick="clickbutt('opthome','/my-site/site/')">
                         <a href="#"><p id="opthomeinfo" class="opttext" >首頁</p></a>
                     </div>
                     <div id="optcontents" onclick="clickbutt('optcontents');clickcontents();">
@@ -24,16 +24,16 @@
                             <a href="#"><p id="contentstoolsinfo" class="opttext">小工具</p></a>
                         </div>
                         <div id="toolslay1">
-                            <div id="tcfshlibbook" onclick="clickbutt('tcfshlibbook','/listurl/tcfsh_lib_book');">
+                            <div id="tcfshlibbook" onclick="clickbutt('tcfshlibbook','/my-site/site/listurl/tcfsh_lib_book');">
                                 <a href="#"><p id="tcfshlibbookinfo" class="opttext">一個厲害的一中閱覽室預約系統</p></a>
                             </div>
-                            <div id="numsort" onclick="clickbutt('numsort','/listurl/numbersort');">
+                            <div id="numsort" onclick="clickbutt('numsort','/my-site/site/listurl/numbersort');">
                                 <a href="#"><p id="numsortinfo" class="opttext">數字排序工具</p></a>
                             </div>
-                            <div id="rannumgen" onclick="clickbutt('rannumgen','/listurl/randomnumgenerator');">
+                            <div id="rannumgen" onclick="clickbutt('rannumgen','/my-site/site/listurl/randomnumgenerator');">
                                 <a href="#"><p id="rannumgeninfo" class="opttext">隨機數字產生器</p></a>
                             </div>
-                            <div id="scrtosub" onclick="clickbutt('scrtosub','/listurl/scripttosubtitle');">
+                            <div id="scrtosub" onclick="clickbutt('scrtosub','/my-site/site/listurl/scripttosubtitle');">
                                 <a href="#"><p id="scrtosubinfo" class="opttext">劇本轉字幕工具</p></a>
                             </div>
                         </div>
@@ -46,12 +46,12 @@
                     </div>
                     
                     <div id="optclose" onclick="clickbutt('optclose');clickbackarrow()">
-                        <a href="#"><p id="optcloseinfo" class="opttext">收合&emsp;<img src="/module/bginfo/images/back2.png" class="imginopts"></p></a>
+                        <a href="#"><p id="optcloseinfo" class="opttext">收合&emsp;<img src="/my-site/site/module/bginfo/images/back2.png" class="imginopts"></p></a>
                     </div>
                 </div> 
             </div>
             <span id="sitenamein1">Black.tech</span>
-            <a href="#" onclick="showuser()"><img id="userico" src="/module/bginfo/images/user2.png"></a>
+            <a href="#" onclick="showuser()"><img id="userico" src="/my-site/site/module/bginfo/images/user2.png"></a>
             <div id="contactall">
                 <div id="contactin">
                     <div id="contactemail">
@@ -73,10 +73,10 @@
                         </div>
                     </div>
                 </div>
-                <img id="closebuttondisactive" src="/module/bginfo/images/closebuttondisactive.png" onclick="clickcontact()">
-                <img id="closebuttonactive" src="/module/bginfo/images/closebuttonactive.png">
+                <img id="closebuttondisactive" src="/my-site/site/module/bginfo/images/closebuttondisactive.png" onclick="clickcontact()">
+                <img id="closebuttonactive" src="/my-site/site/module/bginfo/images/closebuttonactive.png">
             </div>
         </div>
-        <script src="/module/bginfo/sources/bg.js"></script>
+        <script src="my-site/site/module/bginfo/sources/bg.js"></script>
     </body>
 </html>
