--- a/site/listurl/numbersort/index.html
+++ b/site/listurl/numbersort/index.html
@@ -48,7 +48,7 @@
                             </ol>
                         </div>
                         
-                        <script src="numbersort/js/main.js"></script>
+                        <script src="js/main.js"></script>
                     </div>
                 </div>
             </div>
