--- a/site/listurl/numbersort/index.html
+++ b/site/listurl/numbersort/index.html
@@ -61,7 +61,7 @@
                  * 導航欄
                  * footer CopyRight
                  */
-                $(".bg").load("/my-site/site/module/bginfo/bg.php");
+                $(".bg").load("/my-site/site/module/bginfo/bg.html");
                 
             });
         </script>
