--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
 		<div id="pageinfo">
 			<div id="welcome">
 				<span>歡迎來到Black.Teck的網站伺服器!!</span>
-				<p>&emsp;&emsp;現在所在的位置是我在Github上面的網站，我的實體伺服器是負責做後端資料處理，但因為伺服器運行不太穩定，因此有些服務可能會在某些時間受限，敬請包含</p>
+				<p>&emsp;&emsp;現在所在的位置是我在Github上面的網站，我的實體伺服器是負責做後端資料處理，但因為伺服器運行不太穩定，因此有些服務可能會在某些時間受限，敬請包含～～</p>
 			</div>
 			
 		</div>
