--- a/site/listurl/scripttosubtitle/index.html
+++ b/site/listurl/scripttosubtitle/index.html
@@ -16,7 +16,7 @@
                     <h4>劇本內容:</h4>
                     <textarea id="element" rows="30" cols="120" placeholder="請輸入劇本內容(每行必須含有1個冒號)"></textarea>
                     
-                    <button type="button" onclick="getValueInput()">
+                    <button id="convertbut" type="button" onclick="getValueInput()">
                         立即轉換!
                     </button>
                     <h4>輸出字幕:</h4>
