--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,14 @@
 				<span>歡迎來到Black.Teck的網站伺服器!!</span>
 				<p>&emsp;&emsp;現在所在的位置是我在Github上面的網站，我的實體伺服器是負責做後端資料處理，但因為伺服器運行不太穩定，因此有些服務可能會在某些時間受限，敬請包含～～</p>
 			</div>
-			
+			<div id="serversta">
+				<p>以下是伺服器狀態：</p>
+				<div class="infoblock">					
+					<div id="serverstapoint" class="greenpoint"></div>
+					<p id="serverstatext"></p>
+					<p id="serverstadetail"></p>
+				</div>
+			</div>
 		</div>
 		
 	</div>
