--- a/site/index.html
+++ b/site/index.html
@@ -26,8 +26,8 @@
 				<p>以下是伺服器狀態：</p>
 				<div class="infoblock">					
 					<div id="serverstapoint" class="greenpoint"></div>
-					<p id="serverstatext"></p>
-					<p id="serverstadetail"></p>
+					<p id="serverstatext">伺服器在線上</p>
+					<p id="serverstadetail">&emsp;&emsp;現在您可以使用網站中的所有功能，點及右上角人頭圖示進行登入或註冊</p>
 				</div>
 			</div>
 		</div>
