--- a/site/index.html
+++ b/site/index.html
@@ -23,11 +23,11 @@
 				<p>&emsp;&emsp;現在所在的位置是我在Github上面的網站，我的實體伺服器是負責做後端資料處理，但因為伺服器運行不太穩定，因此有些服務可能會在某些時間受限，敬請包含～～</p>
 			</div>
 			<div id="serversta">
-				<p>以下是伺服器狀態：</p>
+				<p style="font-size: 22px;">以下是伺服器狀態：</p>
 				<div class="infoblock">					
 					<div id="serverstapoint" class="greenpoint"></div>
-					<p id="serverstatext">伺服器在線上</p>
-					<p id="serverstadetail">&emsp;&emsp;現在您可以使用網站中的所有功能，點及右上角人頭圖示進行登入或註冊</p>
+					<p id="serverstatext" style="font-size: 20px;">伺服器在線上</p>
+					<p id="serverstadetail" style="font-size: 18px;">&emsp;&emsp;現在您可以使用網站中的所有功能，點擊右上角圖示進行登入或註冊</p>
 				</div>
 			</div>
 		</div>
